# playground-filter

./: .gitignore  README.md  run-blackman.sh  run-moving-average.sh  run.sh
docs/: expected-output.csv  output.csv  plot.gp  signal.csv  square.csv
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/app/include/: config.h  point.h  sequence.h
src/app/src/: config.c  main.c  point.c  sequence.c
src/filter/: CMakeLists.txt
src/filter/include/filter/: filter.h
src/filter/src/: filter.c
